# modern-biojazz

./: .gitignore  AGENTS.md  README.md  benchmark.py  benchmark_grounding.py  fix.py  pyproject.toml
.github/workflows/: ci.yml
docs/: biojazz_comparison.md  catalyst_service_openapi.yaml
examples/: modern_graph_generation_demo.py
src/modern_biojazz/: __init__.py  benchmarking.py  bngl_converter.py  bngplayground_backend.py  cli.py  e2e_pipeline.py  evolution.py  grounding.py  grounding_sources.py  indra_assembly.py  llm_proposer.py  mutation.py  neural_diffusion.py  pathway_discovery.py  pipeline.py  plotting.py  rate_optimizer.py  simulation.py  site_graph.py  utils.py
tests/: conftest.py  test_benchmarking_unit.py  test_bngl_converter_unit.py  test_bngplayground_backend_unit.py  test_cli_unit.py  test_e2e_pipeline_unit.py  test_evolution_unit.py  test_grounding_sources_unit.py  test_grounding_unit.py  test_indra_assembly_unit.py  test_llm_proposer_unit.py  test_mutation_unit.py  test_neural_diffusion_unit.py  test_pathway_discovery_unit.py  test_pipeline_unit.py  test_plotting_unit.py  test_rate_optimizer_unit.py  test_run_assembly_fallback.py  test_simulation_unit.py  test_site_graph_unit.py  test_ssrf_unit.py  test_utils_unit.py
tests/e2e/: test_benchmark_e2e.py  test_cli_e2e.py  test_evolution_e2e.py  test_generation_demos_e2e.py  test_grounding_e2e.py  test_grounding_sources_e2e.py  test_llm_provider_e2e.py  test_modern_methods_evolution_e2e.py  test_mutation_e2e.py  test_pipeline_e2e.py  test_simulation_e2e.py
tests/fixtures/: discovery_snapshot.json  (+4 more)
