[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modern-biojazz"
version = "0.1.0"
description = "Modern BioJazz architecture with simulation, graph mutations, evolution, and grounding"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "BioJazz Modernization"}]
dependencies = ["scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
modern-biojazz = "modern_biojazz.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
modern_biojazz = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
